修正皮卡丘招式表格式：1. 統一使用「～」表示連續技和蓄力 2. 統一按鈕組合描述 3. 統一方向用語 4. 修正備註說明用語 5. 更新頁尾格式

--- a/皮卡丘.html
+++ b/皮卡丘.html
@@ -121,7 +121,7 @@ a:hover {
 <table>
     <tr>
         <th>招式名稱</th>
-        <th>招式類型</th>
+        <th>類型</th>
         <th>可用階段</th>
         <th>按鈕組合</th>
         <th>備註</th>
@@ -133,77 +133,275 @@ a:hover {
         <td>全階段</td>
         <td>A</td>
         <td>無特殊效果</td>
-        <td>53</td>
+        <td>84</td>
     </tr>
     <tr>
-        <td>蓄力十萬伏特</td>
+        <td>十萬伏特～蓄力</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Hold A</td>
-        <td>無特殊效果</td>
+        <td>長按 A</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>126</td>
+    </tr>
+    <tr>
+        <td>電光石火</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>前 + A</td>
+        <td>切換階段</td>
         <td>84</td>
     </tr>
     <tr>
-        <td>蹭蹭臉頰</td>
-        <td>抓取</td>
+        <td>電光石火～蓄力</td>
+        <td>一般</td>
         <td>全階段</td>
-        <td>Forward + A</td>
-        <td>可破防</td>
-        <td>84</td>
+        <td>前 + 長按 A</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>126</td>
     </tr>
     <tr>
         <td>電球</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Backward + A</td>
-        <td>Works against airborne opponents</td>
-        <td>47</td>
+        <td>後 + A</td>
+        <td>無特殊效果</td>
+        <td>63</td>
+    </tr>
+    <tr>
+        <td>電球～蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>後 + 長按 A</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>84</td>
     </tr>
     <tr>
         <td>打雷</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A</td>
-        <td>可用R取消, Control trajectory with the D-Pad</td>
-        <td>105</td>
-    </tr>
-    <tr>
-        <td>伏特攻擊</td>
-        <td>反擊</td>
-        <td>對戰階段</td>
-        <td>Up + A</td>
+        <td>上 + A</td>
         <td>無特殊效果</td>
-        <td>70</td>
+        <td>84</td>
     </tr>
     <tr>
-        <td>同步爆發伏特攻擊追擊</td>
-        <td>反擊</td>
-        <td>對戰階段</td>
-        <td>During Synergy Burst Up + A, A</td>
+        <td>打雷～蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>上 + 長按 A</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>126</td>
+    </tr>
+    <tr>
+        <td>電磁波</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>下 + A</td>
         <td>無特殊效果</td>
-        <td>142</td>
+        <td>63</td>
     </tr>
     <tr>
-        <td>鐵尾</td>
+        <td>電磁波～蓄力</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>下 + 長按 A</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>84</td>
+    </tr>
+    <tr>
+        <td>伏特替換</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>空中 A</td>
+        <td>切換階段</td>
+        <td>84</td>
+    </tr>
+</table><h2>寶可連擊</h2>
+<table>
+    <tr>
+        <th>招式名稱</th>
+        <th>類型</th>
+        <th>可用階段</th>
+        <th>按鈕組合</th>
+        <th>備註</th>
+        <th>傷害值</th>
+    </tr>
+    <tr>
+        <td>寶可連擊1</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + A</td>
-        <td>Major damage</td>
-        <td>95</td>
+        <td>Y，Y，Y，Y</td>
+        <td>無特殊效果</td>
+        <td>126</td>
     </tr>
     <tr>
-        <td>打雷</td>
+        <td>寶可連擊2</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair A during Psynergy Burst</td>
-        <td>可用R取消, Control trajectory with the D-Pad</td>
-        <td>163</td>
+        <td>下 + Y，Y</td>
+        <td>無特殊效果</td>
+        <td>88</td>
+    </tr>
+    <tr>
+        <td>寶可連擊3</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>X，X</td>
+        <td>無特殊效果</td>
+        <td>122</td>
     </tr>
 </table><h2>標準招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
-        <th>招式類型</th>
+        <th>類型</th>
+        <th>可用階段</th>
+        <th>按鈕組合</th>
+        <th>備註</th>
+        <th>傷害值</th>
+    </tr>
+    <tr>
+        <td>弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>Y</td>
+        <td>可被寶可夢招式取消</td>
+        <td>31</td>
+    </tr>
+    <tr>
+        <td>弱攻擊～追擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>Y，Y</td>
+        <td>可被寶可夢招式取消</td>
+        <td>94</td>
+    </tr>
+    <tr>
+        <td>前進弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>前 + Y</td>
+        <td>無特殊效果</td>
+        <td>66</td>
+    </tr>
+    <tr>
+        <td>前進弱攻擊～追擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>前 + Y，Y</td>
+        <td>可被寶可夢招式取消</td>
+        <td>72</td>
+    </tr>
+    <tr>
+        <td>後退弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>後 + Y</td>
+        <td>無特殊效果</td>
+        <td>66</td>
+    </tr>
+    <tr>
+        <td>高姿勢弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>上 + Y</td>
+        <td>無特殊效果</td>
+        <td>81</td>
+    </tr>
+    <tr>
+        <td>低姿勢弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>下 + Y</td>
+        <td>無特殊效果</td>
+        <td>66</td>
+    </tr>
+    <tr>
+        <td>空中弱攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中 Y</td>
+        <td>可被寶可夢招式取消</td>
+        <td>31</td>
+    </tr>
+    <tr>
+        <td>強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>X</td>
+        <td>造成大量傷害</td>
+        <td>99</td>
+    </tr>
+    <tr>
+        <td>強攻擊～蓄力</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>長按 X</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>141</td>
+    </tr>
+    <tr>
+        <td>前進強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>前 + X</td>
+        <td>無特殊效果</td>
+        <td>99</td>
+    </tr>
+    <tr>
+        <td>前進強攻擊～蓄力</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>前 + 長按 X</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>141</td>
+    </tr>
+    <tr>
+        <td>後退強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>後 + X</td>
+        <td>無特殊效果</td>
+        <td>99</td>
+    </tr>
+    <tr>
+        <td>後退強攻擊～蓄力</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>後 + 長按 X</td>
+        <td>可貫穿反擊攻擊</td>
+        <td>141</td>
+    </tr>
+    <tr>
+        <td>高姿勢強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>上 + X</td>
+        <td>無特殊效果</td>
+        <td>125</td>
+    </tr>
+    <tr>
+        <td>低姿勢強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>下 + X</td>
+        <td>無特殊效果</td>
+        <td>132</td>
+    </tr>
+    <tr>
+        <td>空中強攻擊</td>
+        <td>一般</td>
+        <td>對戰階段</td>
+        <td>空中 X</td>
+        <td>可被寶可夢招式取消</td>
+        <td>34</td>
+    </tr>
+</table>
+
+<h2>場地階段招式</h2>
+<table>
+    <tr>
+        <th>招式名稱</th>
+        <th>類型</th>
         <th>可用階段</th>
         <th>按鈕組合</th>
         <th>備註</th>
@@ -222,38 +420,38 @@ a:hover {
         <td>反擊</td>
         <td>全階段</td>
         <td>X + A</td>
-        <td>可用方向鍵+R取消</td>
+        <td>可用方向鍵 + R 取消</td>
         <td>63</td>
     </tr>
     <tr>
-        <td>蓄力反擊</td>
+        <td>反擊～蓄力</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>X + A</td>
-        <td>Can pierce counter attacks.</td>
+        <td>長按 X + A</td>
+        <td>可貫穿反擊攻擊</td>
         <td>84</td>
     </tr>
     <tr>
-        <td>蓄力弱攻擊</td>
+        <td>弱攻擊～蓄力</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Charge and then release Y</td>
-        <td>Does more damage depending on how long the button is held</td>
+        <td>長按 Y</td>
+        <td>按住時間越長傷害越高</td>
         <td>126</td>
     </tr>
     <tr>
         <td>遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y, Y, Y</td>
+        <td>Y，Y，Y</td>
         <td>無特殊效果</td>
         <td>33</td>
     </tr>
     <tr>
-        <td>連接遠距離攻擊</td>
+        <td>遠距離攻擊～連擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Y, Y, Y, Y</td>
+        <td>Y，Y，Y，Y</td>
         <td>無特殊效果</td>
         <td>94</td>
     </tr>
@@ -261,39 +459,39 @@ a:hover {
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y</td>
-        <td>Use to stop opponent</td>
+        <td>側 + Y</td>
+        <td>可阻止對手行動</td>
         <td>33</td>
     </tr>
     <tr>
-        <td>連接側方遠距離攻擊</td>
+        <td>側方遠距離攻擊～連擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y</td>
+        <td>側 + Y，Y</td>
         <td>無特殊效果</td>
         <td>84</td>
     </tr>
     <tr>
-        <td>前方遠距離攻擊</td>
+        <td>前進遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
+        <td>前 + Y</td>
         <td>切換階段</td>
         <td>84</td>
     </tr>
     <tr>
-        <td>後方遠距離攻擊</td>
+        <td>後退遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + Y</td>
+        <td>後 + Y</td>
         <td>無特殊效果</td>
         <td>63</td>
     </tr>
     <tr>
-        <td>跳躍遠距離攻擊</td>
+        <td>空中遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
+        <td>空中 Y</td>
         <td>無特殊效果</td>
         <td>21</td>
     </tr>
@@ -301,135 +499,53 @@ a:hover {
         <td>追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, X, X</td>
-        <td>可用R取消 or B</td>
+        <td>X，X，X</td>
+        <td>可用 R 或 B 取消</td>
         <td>127</td>
     </tr>
     <tr>
-        <td>蓄力追蹤攻擊</td>
+        <td>追蹤攻擊～蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, Hold X</td>
-        <td>貫穿反擊 and breaks the guard</td>
+        <td>X，長按 X</td>
+        <td>可貫穿反擊攻擊並破壞防禦</td>
         <td>159</td>
     </tr>
     <tr>
         <td>跳躍攻擊</td>
         <td>反擊</td>
         <td>場地階段</td>
-        <td>Midair X</td>
+        <td>空中 X</td>
         <td>切換階段</td>
         <td>95</td>
     </tr>
-    <tr>
-        <td>寶可連擊1</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y, Y, Y</td>
-        <td>無特殊效果</td>
-        <td>126</td>
-    </tr>
-    <tr>
-        <td>弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, Y, Y</td>
-        <td>可用寶可夢招式取消</td>
-        <td>67</td>
-    </tr>
-    <tr>
-        <td>弱攻擊~強攻追擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Y, X or Y, Y, X or Y, Y, Y, X</td>
-        <td>Careful timed press of X powers up</td>
-        <td>94</td>
-    </tr>
-    <tr>
-        <td>前方弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Forward + Y</td>
-        <td>Press D-Pad and Y together to power up</td>
-        <td>63</td>
-    </tr>
-    <tr>
-        <td>高姿勢</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + Y</td>
-        <td>Transition into midair attacks. Pushes opponents back</td>
-        <td>54</td>
-    </tr>
-    <tr>
-        <td>寶可連擊2</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Y, Y</td>
-        <td>無特殊效果</td>
-        <td>88</td>
-    </tr>
-    <tr>
-        <td>低姿勢弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + Y</td>
-        <td>可用寶可夢招式取消</td>
-        <td>31</td>
-    </tr>
-    <tr>
-        <td>空中弱攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair Y</td>
-        <td>無特殊效果</td>
-        <td>32</td>
-    </tr>
-    <tr>
-        <td>寶可連擊3</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>X, X</td>
-        <td>無特殊效果</td>
-        <td>122</td>
-    </tr>
-    <tr>
-        <td>強力攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>X</td>
-        <td>可用寶可夢招式取消</td>
-        <td>84</td>
-    </tr>
-    <tr>
-        <td>高姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Up + X</td>
-        <td>創造連擊機會</td>
-        <td>64</td>
-    </tr>
-    <tr>
-        <td>低姿勢強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Down + X</td>
-        <td>無特殊效果</td>
-        <td>95</td>
-    </tr>
-    <tr>
-        <td>空中強攻擊</td>
-        <td>一般</td>
-        <td>對戰階段</td>
-        <td>Midair X</td>
-        <td>Can change trajectory by pressing forwards or backwards</td>
-        <td>80</td>
-    </tr>
-</table><h2>僅限同步爆發時</h2>
+</table>
+
+<h2>支援招式</h2>
 <table>
     <tr>
         <th>招式名稱</th>
-        <th>招式類型</th>
+        <th>類型</th>
+        <th>可用階段</th>
+        <th>按鈕組合</th>
+        <th>備註</th>
+        <th>傷害值</th>
+    </tr>
+    <tr>
+        <td>鋼鐵尾巴</td>
+        <td>一般</td>
+        <td>全階段</td>
+        <td>L + A</td>
+        <td>可用 R 取消，可用方向鍵控制軌跡</td>
+        <td>163</td>
+    </tr>
+</table>
+
+<h2>僅限同步爆發時</h2>
+<table>
+    <tr>
+        <th>招式名稱</th>
+        <th>類型</th>
         <th>可用階段</th>
         <th>按鈕組合</th>
         <th>備註</th>
@@ -437,17 +553,17 @@ a:hover {
     </tr>
     <tr>
         <td>伏特衝擊拳</td>
-        <td>一般</td>
+        <td>爆發</td>
         <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>Pierces 反擊 Attacks</td>
+        <td>同步爆發時按 L + R</td>
+        <td>可貫穿反擊攻擊</td>
         <td>201</td>
     </tr>
 </table>
-    
-    <div style="text-align: center; margin-top: 30px; color: #888;">
-        <p>資料來源: Serebii.net - 自動生成招式表</p>
-        <p><a href="index.html">返回首頁</a></p>
-    </div>
+
+<div style="text-align: center; margin-top: 30px; color: #888;">
+    <p>資料來源：Serebii.net - 自動產生招式表</p>
+    <p><a href="index.html">返回首頁</a></p>
+</div>
 </body>
 </html>
