--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@ a:hover {
         padding: 15px;
         text-align: center;
         transition: all 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 180px;
     }
     .pokemon-card:hover {
         transform: translateY(-5px);
@@ -104,6 +109,11 @@ a:hover {
         max-width: 100px;
         max-height: 100px;
         margin-bottom: 10px;
+        object-fit: contain;
+    }
+    .pokemon-card h3 {
+        margin: 0;
+        padding: 0;
     }
     .pokemon-card a {
         color: white;
